JDK8 compatibility fixes